Use commons codec Base64